different extensionValues initialization?