@@ -4,7 +4,7 @@ import com.qualcomm.robotcore.hardware.DcMotor;
 import com.qualcomm.robotcore.hardware.TouchSensor;
 import com.qualcomm.robotcore.hardware.HardwareMap;
 
-import com.sun.tools.javac.util.List;
+import java.util.Arrays;
 import java.util.ArrayList;
 
 public class Lift {
@@ -12,7 +12,8 @@ public class Lift {
     private TouchSensor limitSwitch;
     private Claw claw;
     private int extendedComponentId;
-    private static final ArrayList extensionValues = new ArrayList<Integer>(List.of(0, 100, 1160, 1500, 1900, 2300, 2700, 3100, 3500, 3900, 4300));
+    // private static final ArrayList extensionValues = new ArrayList<Integer>(List.of(0, 100, 1160, 1500, 1900, 2300, 2700, 3100, 3500, 3900, 4300));
+    private static final ArrayList extensionValues = Arrays.asList(0, 100, 1160, 1500, 1900, 2300, 2700, 3100, 3500, 3900, 4300);
 
     public Lift(HardwareMap hardwareMap, Claw inheritedClaw) {
         liftMotor = hardwareMap.get(DcMotor.class, "liftMotor");
